<resources>
    <string name="app_name">淘视界</string>
    <string name="action_settings">Settings</string>
    <string name="tab_home">首页</string>
    <string name="tab_video">视频</string>
    <string name="tab_preemption">抢先</string>
    <string name="tab_read">阅读</string>
    <string name="tab_my">我的</string>
    <string name="mine_msg">消息</string>
    <string name="mine_mijue">赚钱秘籍</string>
    <string name="mine_invitation_code">我的邀请码</string>
    <string name="mine_gold">我的金币</string>
    <string name="mine_zs">我的钻石</string>
    <string name="mine_balance">我的余额</string>
    <string name="mine_task_room">任务大厅</string>
    <string name="mine_exchange">兑换提现</string>
    <string name="mine_pay_center">充值中心</string>
    <string name="mine_input_exchange">输入邀请码</string>
    <string name="mine_tixian">新手一元提现</string>
    <string name="my_download">我的下载</string>
    <string name="my_follow">我的关注</string>
    <string name="qq_qun">交流群</string>
    <string name="qa">解决常见问题</string>
    <string name="watch_the_record">观看记录</string>
    <string name="more_the_record">更多记录</string>
    <string name="home_hlep">帮助与反馈</string>
    <string name="home_collect">我的收藏</string>
    <string name="home_setting">设置</string>
    <string name="another_batch">换一批</string>
    <string name="more_movie">更多电影</string>
    <string name="more_variety">更多综艺</string>
    <string name="more">更多</string>
    <string name="ad">广告</string>
    <string name="search">搜索</string>
    <string name="search_movie">搜索片库</string>
    <string name="search_book">搜索书籍</string>
    <string name="download">下载</string>
    <string name="share">分享</string>
    <string name="collection">收藏</string>
    <string name="select_movie">选集</string>
    <string name="recommended_for_you">为您推荐</string>
    <string name="netword_error">网络出错！点击刷新</string>
    <string name="no_msg_data">没有消息</string>
    <string name="no_follow_data">没有关注</string>
    <string name="no_download_data">没有下载</string>
    <string name="no_tudi_data">没有徒弟</string>
    <string name="no_collection_data">没有收藏</string>
    <string name="no_comment_data">没有评论</string>
    <string name="no_movie_data">没有影片</string>
    <string name="no_video_data">没有视频</string>
    <string name="no_book_data">没有书籍</string>
    <string name="load_error">加载出错,点击重试</string>
    <string name="network_error">网络连接失败，请检查网络后再试</string>
    <string name="history_video">观看历史</string>
    <string name="clear">清空</string>
    <string name="edit">管理</string>
    <string name="all">全选</string>
    <string name="reverse">反选</string>
    <string name="delete">删除</string>
    <string name="onekey_follow">一键关注</string>
    <string name="followed">已关注</string>
    <string name="follow">关注</string>
    <string name="cache">缓存</string>
    <string name="review_cache">查看缓存</string>
    <string name="history_search">历史搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="del_one">确定删除该条历史搜索</string>
    <string name="del_all">确定删除历史搜索吗？</string>
    <string name="clear_cache">清除缓存</string>
    <string name="check_version">检查更新</string>
    <string name="setting">设置</string>
    <string name="version_unknown" translatable="false">未知版本号</string>
    <string name="input_phone">输入手机号</string>
    <string name="input_pwd">输入6-22位密码</string>
    <string name="now_register">立即注册</string>
    <string name="forget_pass">忘记密码</string>
    <string name="recommend_login">推荐登录</string>
    <string name="verfiy_code">获取验证码</string>
    <string name="input_verfiy_code">输入验证码</string>
    <string name="register_inv">输入邀请码或手机号码（选填）</string>
    <string name="reggister_">注册领红包</string>
    <string name="enter">确定</string>
    <string name="register">注册</string>
    <string name="bind">绑定手机</string>
    <string name="now_find">立即找回</string>
    <string name="tip_input_phone">请输入11位手机号码</string>
    <string name="tip_input_code">请输入4位有效验证码</string>
    <string name="tip_input_pass">请输入6-22位密码</string>
    <string name="code_ok">验证码获取成功</string>
    <string name="register_ok">注册成功</string>
    <string name="login_ok">登录成功</string>
    <string name="tmep_login">注册/登录</string>
    <string name="find_pwd_ok">找回密码成功，请用新密码登录</string>
    <string name="to_star">主演:</string>
    <string name="profiles">简介:</string>
    <string name="shareing">正在进行分享，请稍后...</string>
    <string name="wechat_login">正在微信登录，请稍后...</string>
    <string name="close">关闭</string>
    <string name="player_error">播放出错？更换线路试试</string>
    <string name="player_error_retry">播放出错,请重试</string>
    <string name="edit_over">完成</string>
    <string name="tip_input_keyword">请输入关键字</string>
    <string name="logout">退出登录</string>
    <string name="clear_cache_ok">缓存清理成功</string>
    <string name="exit_app">再按一次退出应用</string>
    <string name="logout_msg">确定要退出登录吗？</string>
    <string name="small_video">小视频</string>
    <string name="search_movies">电影</string>
    <string name="search_tvplay">电视剧</string>
    <string name="report_ok">举报成功</string>
    <string name="null_commnet">请输入评论内容</string>
    <string name="whatsgold">什么是金币</string>
    <string name="gold_info">金币会在次日根据汇率转化为零钱，通常10000=1元，金币越多零钱越多</string>
    <string name="zmz">怎么赚</string>
    <string name="zmz_info">金币可以通过看视频赚取，%1$d秒奖励一次，看的视频越多，金币也越多 \n</string>
    <string name="plus_gold">+%1$d金币</string>
    <string name="retry_login">您的账号已在其他设备登录,请重新登录</string>
    <string name="movie_time">本片仅支持试看%1$d分钟</string>
    <string name="share_movie">分享观看完整版</string>
    <string name="movie_play_time">已试看%1$d分钟</string>
    <string name="movie_play_gold">观看本视频需%1$d金币</string>
    <string name="movie_gold">去兑换</string>
    <string name="movie_enter_play">确认播放</string>
    <string name="day_mode">日间</string>
    <string name="night_mode">夜间</string>
    <string name="book_chapter_num">共%1$d章</string>
    <string name="read_pay_title">————   本章节需要购买后阅读   ————</string>
    <string name="read_pay_money">"价格：%1$d钻石"</string>
    <string name="read_pay_balance">余额：%1$d钻石</string>
    <string name="read_pay_buttom_text">余额不足，去充值</string>
    <string name="read_pay_current">购买本章</string>
    <string name="read_pay_tips">充值送钻石，购书折上折</string>
    <string name="add_bookstore">是否将《%1$s》加入书架</string>
    <string name="read_auto_pay">自动购买下一章，不再提醒</string>
    <string name="give_gold">您已获得金币奖励%1$d</string>
</resources>
