<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_count_download_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_below="@+id/video_view"
    android:layout_gravity="bottom"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:visibility="gone">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/cache"
            android:textColor="@color/c_333333"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/count_download_view_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right|center_vertical"
            android:background="@android:color/transparent"
            android:src="@mipmap/icon_close" />
    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/count_download_view_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:overScrollMode="never"></android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/ll_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/btn_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/all"
            android:textColor="@color/c_333333"
            android:textSize="17sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="30dp"
            android:background="@color/color_line" />

        <TextView
            android:id="@+id/btn_cache"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/review_cache"
            android:textColor="@color/c_333333"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>
