<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_tab"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/c_e4e4e4" />

    <LinearLayout
        android:id="@+id/main_bottom_rg"
        android:layout_width="match_parent"
        android:layout_height="49.5dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_white"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/main_bottom_mine_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/selector_home_tab_read"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tab_read"
            android:textColor="@color/main_bottom_rb_text_color"
            android:textSize="10sp" />


        <LinearLayout
            android:id="@+id/main_bottom_news_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/iv_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selector_home_tab_pree" />

            <TextView
                android:id="@+id/tv_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/tab_preemption"
                android:textColor="@color/main_bottom_rb_text_color"
                android:textSize="10sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/main_bottom_plays_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/selector_home_tab_video"
                android:gravity="center"
                android:text="@string/tab_video"
                android:textColor="@color/main_bottom_rb_text_color"
                android:textSize="9sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_toRightOf="@+id/main_bottom_plays_rb"
                android:src="@mipmap/tab_gold" />
        </RelativeLayout>


        <TextView
            android:id="@+id/main_bottom_mine_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/selector_home_tab_me"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tab_my"
            android:textColor="@color/main_bottom_rb_text_color"
            android:textSize="10sp" />
    </LinearLayout>
</LinearLayout>