<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tl="http://schemas.android.com/apk/res-auto"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:src="@mipmap/icon_back" />

            <EditText
                android:id="@+id/et_input"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_weight="1"
                android:background="@drawable/search_bg"
                android:hint="@string/search_movie"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:textColor="@color/c_333333"
                android:textColorHint="@color/c_999999"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/search"
                android:textColor="@color/c_333333"
                android:textSize="17sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/c_f2f2f2" />

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/search_def_ns"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/hot_search"
                        android:textColor="@color/c_333333"
                        android:textSize="15sp" />

                    <com.zhy.view.flowlayout.TagFlowLayout
                        android:id="@+id/taglayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        zhy:max_select="-1"></com.zhy.view.flowlayout.TagFlowLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/history_search"
                            android:textColor="@color/c_333333"
                            android:textSize="15sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.1dp"
                            android:layout_weight="1" />

                        <ImageButton
                            android:id="@+id/btn_clear"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@android:color/transparent"
                            android:src="@mipmap/icon_del" />

                    </LinearLayout>


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/history_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:overScrollMode="never"></android.support.v7.widget.RecyclerView>


                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

            <LinearLayout
                android:id="@+id/search_result_ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_small_video"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="9dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_small_video"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/small_video"
                            android:textColor="@color/c_333333"
                            android:textSize="17sp" />

                        <View
                            android:id="@+id/indicator_small_video"
                            android:layout_width="20dp"
                            android:layout_height="3dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/search_tab_indicatior"
                            android:visibility="visible" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_search_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="29dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_search_movie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_movies"
                            android:textColor="@color/c_333333"
                            android:textSize="17sp" />

                        <View
                            android:id="@+id/indicator_view_movie"
                            android:layout_width="20dp"
                            android:layout_height="3dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/search_tab_indicatior"
                            android:visibility="invisible" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_tv_play"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="29dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_search_tvplay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_tvplay"
                            android:textColor="@color/c_333333"
                            android:textSize="17sp" />

                        <View
                            android:id="@+id/indicator_view_tvplay"
                            android:layout_width="20dp"
                            android:layout_height="3dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/search_tab_indicatior"
                            android:visibility="invisible" />

                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.application.sven.huinews.view.RefreshLayout
                        android:id="@+id/refresh_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/search_rv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:overScrollMode="never"></android.support.v7.widget.RecyclerView>
                    </com.application.sven.huinews.view.RefreshLayout>

                    <com.application.sven.huinews.view.EmptyLayout
                        android:id="@+id/mEmptyLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></com.application.sven.huinews.view.EmptyLayout>
                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>